syntax = "proto3";

package employee;

option go_package = "ai-boshqaruv-backend/api/proto/employee";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Employee message
message Employee {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string position = 6;
  string department = 7;
  string status = 8; // active, vacation, inactive
  string avatar_url = 9;
  int32 performance = 10;
  bool is_top_performer = 11;
  string location = 12;
  google.protobuf.Timestamp join_date = 13;
  google.protobuf.Timestamp created_at = 14;
}

// CreateEmployeeRequest
message CreateEmployeeRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string position = 5;
  string department = 6;
  string location = 7;
}

// GetEmployeeRequest
message GetEmployeeRequest {
  int64 id = 1;
}

// ListEmployeesRequest
message ListEmployeesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string department = 4;
  string status = 5;
}

// ListEmployeesResponse
message ListEmployeesResponse {
  repeated Employee employees = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// UpdateEmployeeRequest
message UpdateEmployeeRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string position = 6;
  string department = 7;
  string status = 8;
  string location = 9;
}

// DeleteEmployeeRequest
message DeleteEmployeeRequest {
  int64 id = 1;
}

// EmployeeService
service EmployeeService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (Employee);
  rpc GetEmployee(GetEmployeeRequest) returns (Employee);
  rpc ListEmployees(ListEmployeesRequest) returns (ListEmployeesResponse);
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (Employee);
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (google.protobuf.Empty);
}



